--- a/app/elements/user-collection.html
+++ b/app/elements/user-collection.html
@@ -75,6 +75,13 @@
                 on-response="userSaved"
                 loading="{{loading.putUser}}">
         </iron-ajax>
+        <iron-ajax id="deleteUser"
+                method="DELETE"
+                url="/users/{{ajaxData.id}}"
+                on-error="DeleteUserFailed"
+                on-response="userDeleted"
+                loading="{{loading.deleteUser}}">
+        </iron-ajax>
 
         <!-- a filter box -->
         <div class="layout horizontal center end-justified mv-lg">
@@ -150,8 +157,8 @@
                 id="deleteUserConfirmationDialog">
             <h2>Delete User</h2>
             <p>
-                Are you sure you want to delete {{userToDelete.role}}
-                <strong>{{userToDelete.name}}</strong>?
+                Are you sure you want to delete {{ajaxData.role}}
+                <strong>{{ajaxData.name}}</strong>?
             </p>
 
             <div class="buttons">
@@ -251,6 +258,7 @@
                             getUsers: false,
                             putUser: false,
                             postUser: false,
+                            deleteUser: false,
                         },
                     },
                     // True whenever we're loading XHR data.
@@ -297,7 +305,6 @@
                     this.toastMessage = "Failed to create user :(";
                     this.$.errorToast.open();
                 },
-
                 // Called when a PUT /users succeeds.
                 userSaved: function() {
                     this.toastMessage =
@@ -318,21 +325,25 @@
                     this.toastMessage = "Failed to save user :(";
                     this.$.errorToast.open();
                 },
-
-
-                // UTILITY FUNCTIONS
-                toDateStringPretty: function (timestamp) {
-                    if(timestamp) {
-                        var date = new Date(timestamp)
-                        return date.toDateString() + ' ' + date.toLocaleTimeString();
+                userDeleted: function() {
+                    this.toastMessage =
+                            this.ajaxData.role + " " +
+                            this.ajaxData.email + " deleted";
+                    // Remove from users list.
+                    for(var i = 0; i < this.users.length; i++) {
+                        if(this.users[i].id === this.ajaxData.id) {
+                            this.splice('users', i, 1);
+                        }
                     }
-                    else return '(no activity recorded)';
+                    this.$.successToast.open();
+                },
+                deleteUserFailed: function() {
+                    this.toastMessage = "Failed to delete user :(";
+                    this.$.errorToast.open();
                 },
 
                 openEditUserDialog: function() {
-
-                    var currentTarget = e.currentTarget;
-                    var idAttr = currentTarget.attributes['data-id'];
+                    var idAttr = e.currentTarget.attributes['data-id'];
                     var id;
                     if(idAttr) id = Number(idAttr.value);
 
@@ -359,45 +370,26 @@
                 },
 
                 deleteUserClick: function (e) {
-                    // prohibit containing div from firing its on-tap handler
-                    e.stopPropagation();
-
-                    var currentTarget = e.currentTarget;
-                    var id = Number(currentTarget.attributes['data-id'].value);
-
+                    var id = Number(e.currentTarget.attributes['data-id'].value);
                     if (id) {
-                        var userToDelete;
+                        var that = this;
                         this.users.forEach(function(user) {
-                            if (id === user.id) userToDelete = user;
+                            if (id === user.id) that.ajaxData = user;
                         });
-                        this.set('userToDelete', userToDelete);
                     }
                     this.$.deleteUserConfirmationDialog.open();
                 },
-
                 deleteUserConfirmClick: function () {
+                    this.$.deleteUser.generateRequest();
+                },
 
-                    this.set('progressActive', true);
-
-                    var that = this;
-                    this.deleteUser(this.userToDelete.id)
-                        .then(function() {
-                            // remove from users list
-                            for(var i = 0; i < that.users.length; i++) {
-                                if(that.users[i].id === that.userToDelete.id) {
-                                    that.splice('users', i, 1);
-                                }
-                            }
-                            // notify success
-                            that.set('successMessage', 'User deleted');
-                            that.$.userSuccess.open();
-                            that.set('progressActive', false);
-                        }, function (err) {
-                            // notify error
-                            that.set('errorMessage', 'Error deleting user');
-                            that.$.userError.open();
-                            that.set('progressActive', false);
-                        });
+                // UTILITY FUNCTIONS
+                toDateStringPretty: function (timestamp) {
+                    if(timestamp) {
+                        var date = new Date(timestamp)
+                        return date.toDateString() + ' ' + date.toLocaleTimeString();
+                    }
+                    else return '(no activity recorded)';
                 },
             });
         })();
