--- a/app/elements/recipe-collection.html
+++ b/app/elements/recipe-collection.html
@@ -54,7 +54,7 @@
         <div class="layout horizontal center">
             <iron-ajax auto method="GET"
                     url="/recipes"
-                    params="{{recipeFilter}}"
+                    params="[[recipeFilter]]"
                     handle-as="json"
                     last-response="{{recipes}}"
                     debounce-duration="100"
@@ -63,15 +63,15 @@
                     loading="{{loadingRecipes}}">
             </iron-ajax>
             <!-- Navigation icons. -->
-            <paper-button raised on-tap="previous" disabled$="{{!skip}}">
+            <paper-button raised on-tap="previous" disabled$="[[!skip]]">
                 <iron-icon icon="icons:arrow-back"></iron-icon>
             </paper-button>
-            <paper-button raised on-tap="next" disabled$="{{disableNext}}">
+            <paper-button raised on-tap="next" disabled$="[[disableNext]]">
                 <iron-icon icon="icons:arrow-forward"></iron-icon>
             </paper-button>
             <span class="nav-button">Page {{pageNumber}}</span>
             <!--<span class="flex"></span>-->
-            <paper-spinner class="nav-button" active="{{loadingRecipes}}"
+            <paper-spinner class="nav-button" active="[[loadingRecipes]]"
                     alt="loading recipes...">
             </paper-spinner>
             <!--<span class="flex"></span>-->
@@ -83,19 +83,19 @@
             </paper-input>
         </div>
 
-        <template is="dom-repeat" items={{recipes}} as="recipe">
+        <template is="dom-repeat" items=[[recipes]] as="recipe">
             <paper-material>
                 <div class="recipe-card" on-tap="itemClick">
                     <div class="layout horizontal end end-justified wrap">
-                        <h3 class="recipe-title">{{recipe.title}}</h3>
+                        <h3 class="recipe-title">[[recipe.title]]</h3>
                         <!--<div class="layout horizontal end-justified">-->
                             <span class="flex"></span>
                             <span class="recipe-tags">
-                                {{formatRecipeTags(recipe.tags)}}
+                                [[formatRecipeTags(recipe.tags)]]
                             </span>
                         <!--</div>-->
                     </div>
-                    <div class="recipe-summary">{{recipe.summary}}</div>
+                    <div class="recipe-summary">[[recipe.summary]]</div>
 
                     <iron-collapse id="collapse" opened="{{recipe._expanded}}">
                         <div class="layout horizontal wrap">
@@ -103,9 +103,9 @@
                                 <strong>Ingredients</strong>
                                 <ul class="ingredients-list">
                                     <template is="dom-repeat"
-                                            items="{{recipe.ingredients}}"
+                                            items="[[recipe.ingredients]]"
                                             as="i">
-                                        <li>{{i}}</li>
+                                        <li>[[i]]</li>
                                     </template>
                                 </ul>
                             </div>
@@ -113,43 +113,43 @@
                                 <strong>Directions</strong>
                                 <ol class="directions-list">
                                     <template is="dom-repeat"
-                                            items="{{recipe.directions}}"
+                                            items="[[recipe.directions]]"
                                             as="d">
-                                        <li>{{d}}</li>
+                                        <li>[[d]]</li>
                                     </template>
                                 </ol>
                             </div>
                             <!-- Info column. -->
                             <div class="flex-4 recipe-col">
-                                <template is="dom-if" if="{{recipe.amount}}">
+                                <template is="dom-if" if="[[recipe.amount]]">
                                     <strong>Amount</strong>
-                                    <div>{{recipe.amount}}</div>
+                                    <div>[[recipe.amount]]</div>
                                     <br />
                                 </template>
-                                <template is="dom-if" if="{{recipe.time}}">
+                                <template is="dom-if" if="[[recipe.time]]">
                                     <strong>Time</strong>
-                                    <div>{{recipe.time}}</div>
+                                    <div>[[recipe.time]]</div>
                                     <br />
                                 </template>
-                                <template is="dom-if" if="{{recipe.oven}}">
+                                <template is="dom-if" if="[[recipe.oven]]">
                                     <Strong>Oven</Strong>
-                                    <div>{{recipe.oven}}</div>
+                                    <div>[[recipe.oven]]</div>
                                     <br />
                                 </template>
                                 <strong>Author</strong>
-                                <div>{{recipe.author_name}}</div>
+                                <div>[[recipe.author_name]]</div>
                                 <br />
-                                <template is="dom-if" if="{{recipe.source}}">
+                                <template is="dom-if" if="[[recipe.source]]">
                                     <strong>Source</strong>
-                                    <div>{{recipe.source}}</div>
+                                    <div>[[recipe.source]]</div>
                                     <br />
                                 </template>
                                 <strong>Revision</strong>
-                                <div>{{recipe.revision}}</div>
+                                <div>[[recipe.revision]]</div>
                                 <br />
-                                <template is="dom-if" if="{{recipe.notes}}">
+                                <template is="dom-if" if="[[recipe.notes]]">
                                     <strong>Notes</strong>
-                                    <div>{{recipe.notes}}</div>
+                                    <div>[[recipe.notes]]</div>
                                     <br />
                                 </template>
                             </div>
