--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -49,14 +49,14 @@
 
 <!-- Add your elements here -->
 <!--<link rel="import" href="app-config.html">-->
-<link rel="import" href="global-behavior.html">
+<!--<link rel="import" href="global-behavior.html">-->
 
-<link rel="import" href="user-behavior.html">
+<!--<link rel="import" href="user-behavior.html">-->
 <link rel="import" href="user-collection.html">
-
 <link rel="import" href="recipe-collection.html">
+<link rel="import" href="recipe-details.html">
 
-<link rel="import" href="cookie-display.html">
+<!--<link rel="import" href="cookie-display.html">-->
 
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/global-styles.html">
