--- a/app/elements/recipe-collection.html
+++ b/app/elements/recipe-collection.html
@@ -1,8 +1,9 @@
 <!--
-    Randy Westlund and Jon Doltar
-    2016-02
+    Randy Westlund
+    2016-04
 -->
-<!-- this module shows a list of recipes -->
+<!-- This module shows a list of recipes, with server-side pagination and
+     search. -->
 
 <link rel="import" href="../bc/polymer/polymer.html">
 
@@ -13,55 +14,20 @@
             :host {
                 display: block;
             }
-            div.recipe-item {
-                margin-bottom: 1em;
-            }
-            .recipe-title {
-                margin-bottom: 0;
-            }
-            div.recipe-summary {
-                margin-bottom: 0.5em;
-            }
-            hr.recipe-divider {
-                color: gray;
-            }
-            .recipe-col {
-                 min-width: 300px;
-                 padding:1em;
-            }
-            ul.ingredients-list > li {
-                margin-bottom: 0.3em;
-            }
-            ol.directions-list > li {
-                margin-bottom: 1em;
-            }
-            .nav-button {
-                margin-left: 0.8em;
-                margin-right: 0.8em;
-            }
-            .recipe-card {
-                padding-left: 0.5em;
-                padding-right: 0.5em;
-                padding-top: 0.1em;
-                padding-bottom: 0.1em;
-             }
-            span.recipe-tags {
-                color: gray;
-            }
         </style>
 
-        <!-- a filter box -->
+        <!-- AJAX requests. -->
+        <iron-ajax auto method="GET"
+                url="/recipes"
+                params="[[recipeFilter]]"
+                handle-as="json"
+                last-response="{{recipes}}"
+                debounce-duration="100"
+                on-error="loadingRecipesFailed"
+                on-response="newRecipesReceived"
+                loading="{{loadingRecipes}}">
+        </iron-ajax>
         <div class="layout horizontal center">
-            <iron-ajax auto method="GET"
-                    url="/recipes"
-                    params="[[recipeFilter]]"
-                    handle-as="json"
-                    last-response="{{recipes}}"
-                    debounce-duration="100"
-                    on-error="onAjaxError"
-                    on-response="newRecipesReceived"
-                    loading="{{loadingRecipes}}">
-            </iron-ajax>
             <!-- Navigation icons. -->
             <paper-button raised on-tap="previous" disabled$="[[!skip]]">
                 <iron-icon icon="icons:arrow-back"></iron-icon>
@@ -85,7 +51,7 @@
 
         <template is="dom-repeat" items=[[recipes]] as="recipe">
             <paper-material>
-                <div class="recipe-card" on-tap="itemClick">
+                <div class="card-item" on-tap="itemClick">
                     <div class="layout horizontal end end-justified wrap">
                         <h3 class="recipe-title">[[recipe.title]]</h3>
                         <!--<div class="layout horizontal end-justified">-->
@@ -95,7 +61,7 @@
                             </span>
                         <!--</div>-->
                     </div>
-                    <div class="recipe-summary">[[recipe.summary]]</div>
+                    <div>[[recipe.summary]]</div>
 
                     <iron-collapse id="collapse" opened="{{recipe._expanded}}">
                         <div class="layout horizontal wrap">
@@ -121,43 +87,58 @@
                             </div>
                             <!-- Info column. -->
                             <div class="flex-4 recipe-col">
-                                <template is="dom-if" if="[[recipe.amount]]">
-                                    <strong>Amount</strong>
-                                    <div>[[recipe.amount]]</div>
-                                    <br />
-                                </template>
-                                <template is="dom-if" if="[[recipe.time]]">
-                                    <strong>Time</strong>
-                                    <div>[[recipe.time]]</div>
-                                    <br />
-                                </template>
-                                <template is="dom-if" if="[[recipe.oven]]">
-                                    <Strong>Oven</Strong>
-                                    <div>[[recipe.oven]]</div>
-                                    <br />
-                                </template>
-                                <strong>Author</strong>
-                                <div>[[recipe.author_name]]</div>
-                                <br />
-                                <template is="dom-if" if="[[recipe.source]]">
-                                    <strong>Source</strong>
-                                    <div>[[recipe.source]]</div>
-                                    <br />
-                                </template>
-                                <strong>Revision</strong>
-                                <div>[[recipe.revision]]</div>
-                                <br />
-                                <template is="dom-if" if="[[recipe.notes]]">
-                                    <strong>Notes</strong>
-                                    <div>[[recipe.notes]]</div>
-                                    <br />
-                                </template>
+                                <div class="layout horizontal justified">
+                                    <div>
+                                        <template is="dom-if" if="[[recipe.amount]]">
+                                            <strong>Amount</strong>
+                                            <div>[[recipe.amount]]</div>
+                                            <br />
+                                        </template>
+                                        <template is="dom-if" if="[[recipe.time]]">
+                                            <strong>Time</strong>
+                                            <div>[[recipe.time]]</div>
+                                            <br />
+                                        </template>
+                                        <template is="dom-if" if="[[recipe.oven]]">
+                                            <Strong>Oven</Strong>
+                                            <div>[[recipe.oven]]</div>
+                                            <br />
+                                        </template>
+                                        <strong>Author</strong>
+                                        <div>[[recipe.author_name]]</div>
+                                        <br />
+                                        <template is="dom-if" if="[[recipe.source]]">
+                                            <strong>Source</strong>
+                                            <div>[[recipe.source]]</div>
+                                            <br />
+                                        </template>
+                                        <strong>Revision</strong>
+                                        <div>[[recipe.revision]]</div>
+                                        <br />
+                                        <template is="dom-if" if="[[recipe.notes]]">
+                                            <strong>Notes</strong>
+                                            <div>[[recipe.notes]]</div>
+                                            <br />
+                                        </template>
+                                    </div>
+                                    <paper-icon-button icon="icons:create"
+                                            data-id$="[[recipe.id]]"
+                                            on-tap="loadRecipePage">
+                                    </paper-icon-button>
+                                </div>
                             </div>
                         </div>
                     </iron-collapse>
                 </div>
             </paper-material>
         </template>
+
+        <paper-toast
+                id="errorToast"
+                class="error-toast"
+                text="Failed to communicate with server :("
+                duration="4000">
+        </paper-toast>
     </template>
 
     <script>
@@ -226,6 +207,14 @@
                 // current one is blank.
                 newRecipesReceived: function() {
                     if (!this.recipes.length && this.skip) this.skip--;
+                },
+                loadingRecipesFailed: function() {
+                    this.$.errorToast.open();
+                },
+                loadRecipePage: function(e) {
+                    e.stopPropagation();
+                    var id = e.currentTarget.attributes['data-id'].value;
+                    page.show('/#!/recipes/' + id);
                 },
                 itemClick: function (event) {
                     var item = event.currentTarget;
