--- a/app/elements/user-collection.html
+++ b/app/elements/user-collection.html
@@ -7,12 +7,11 @@
 <link rel="import" href="../bc/polymer/polymer.html">
 
 <!-- External styles for this element -->
-<link rel="import" href="../styles/user-collection-style.html">
+<link rel="import" href="../styles/global-styles.html">
 
 <dom-module id="user-collection">
     <template>
-        <!-- Include the external styles for this element -->
-        <style is="custom-style" include="user-collection-style"></style>
+        <style is="custom-style" include="global-styles"></style>
         <style>
             :host {
                 display: block;
@@ -20,6 +19,10 @@
             #filterInputField {
                 width 200px;
                 float: right;
+            }
+            .add-user-button {
+                --paper-fab-background: #DDD;
+                color: #373a3c;
             }
             .page-title-text {
                 font-size: 2em;
@@ -103,7 +106,7 @@
         <!-- Each user card. -->
         <template is="dom-repeat" items=[[users]] as="user">
             <paper-material>
-                <div class="item">
+                <div class="card-item">
                     <div class="layout horizontal center justified">
                         <h3 class="user-title">[[user.name]]</h3>
                         <div>
