Move edit recipe button, make details page render

--- a/app/styles/global-styles.html
+++ b/app/styles/global-styles.html
@@ -25,7 +25,8 @@
             }
             .recipe-col {
                  min-width: 300px;
-                 padding:1em;
+                 padding-left: 1em;
+                 padding-right: 1em;
             }
             ul.ingredients-list > li {
                 margin-bottom: 0.3em;
@@ -40,14 +41,23 @@
             span.recipe-tags {
                 color: gray;
             }
+            div.headerbar {
+                /*
+                margin-top: 1em;
+                margin-bottom: 1em;
+                    */
+            }
+            div.headerbar > paper-button {
+                margin-top: 1.2em;
+                margin-bottom: 1.2em;
+            }
 
             .card-item {
                 padding-left: 0.5em;
                 padding-right: 0.5em;
-                padding-top: 0.3em;
-                padding-bottom: 0.3em;
+                padding-top: 0.5em;
+                padding-bottom: 0.5em;
              }
-
 
 
             paper-dialog {
