--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,47 +1,37 @@
 <!-- Iron elements -->
 <!-- is something else here including this? it's used in the main file somehow -->
 <!--<link rel="import" href="../bc/iron-flex-layout/classes/iron-flex-layout.html">-->
-<link rel="import" href="../bc/iron-icons/iron-icons.html">
-<link rel="import" href="../bc/iron-icons/social-icons.html">
-<link rel="import" href="../bc/iron-icons/maps-icons.html">
-<link rel="import" href="../bc/iron-icons/communication-icons.html">
-<link rel="import" href="../bc/iron-icons/device-icons.html">
-<link rel="import" href="../bc/iron-pages/iron-pages.html">
-<link rel="import" href="../bc/iron-selector/iron-selector.html">
 <link rel="import" href="../bc/iron-ajax/iron-ajax.html">
-<link rel="import" href="../bc/iron-list/iron-list.html">
 <link rel="import" href="../bc/iron-collapse/iron-collapse.html">
+<!--<link rel="import" href="../bc/iron-icons/communication-icons.html">-->
+<!--<link rel="import" href="../bc/iron-icons/device-icons.html">-->
+<link rel="import" href="../bc/iron-icons/iron-icons.html">
+<!--<link rel="import" href="../bc/iron-icons/maps-icons.html">-->
+<link rel="import" href="../bc/iron-icons/social-icons.html">
+<!--<link rel="import" href="../bc/iron-list/iron-list.html">-->
+<link rel="import" href="../bc/iron-pages/iron-pages.html">
+<!--<link rel="import" href="../bc/iron-selector/iron-selector.html">-->
 
 
 <!-- Paper elements -->
-<link rel="import" href="../bc/paper-drawer-panel/paper-drawer-panel.html">
-<link rel="import" href="../bc/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bc/paper-button/paper-button.html">
+<!--<link rel="import" href="../bc/paper-dialog-scrollable/paper-dialog-scrollable.html">-->
+<link rel="import" href="../bc/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bc/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bc/paper-fab/paper-fab.html">
+<link rel="import" href="../bc/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../bc/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bc/paper-input/paper-textarea.html">
 <link rel="import" href="../bc/paper-item/paper-item.html">
 <link rel="import" href="../bc/paper-material/paper-material.html">
-<link rel="import" href="../bc/paper-card/paper-card.html">
 <link rel="import" href="../bc/paper-menu/paper-menu.html">
-<link rel="import" href="../bc/paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../bc/paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="../bc/paper-dialog/paper-dialog.html">
-<link rel="import" href="../bc/paper-dialog-scrollable/paper-dialog-scrollable.html">
-<link rel="import" href="../bc/paper-dialog-behavior/demo/simple-dialog.html">
-
+<link rel="import" href="../bc/paper-spinner/paper-spinner.html">
 <link rel="import" href="../bc/paper-styles/color.html">
-<link rel="import" href="../bc/paper-styles/typography.html">
 <link rel="import" href="../bc/paper-styles/paper-styles-classes.html">
 <link rel="import" href="../bc/paper-styles/paper-styles.html">
+<link rel="import" href="../bc/paper-styles/typography.html">
 <link rel="import" href="../bc/paper-toast/paper-toast.html">
-<link rel="import" href="../bc/paper-spinner/paper-spinner.html">
-<link rel="import" href="../bc/paper-progress/paper-progress.html">
 <link rel="import" href="../bc/paper-toolbar/paper-toolbar.html">
-<link rel="import" href="../bc/paper-header-panel/paper-header-panel.html">
-<link rel="import" href="../bc/paper-checkbox/paper-checkbox.html">
-<link rel="import" href="../bc/paper-toggle-button/paper-toggle-button.html">
-<link rel="import" href="../bc/paper-button/paper-button.html">
-<link rel="import" href="../bc/paper-radio-button/paper-radio-button.html">
-<link rel="import" href="../bc/paper-input/paper-textarea.html">
-<link rel="import" href="../bc/paper-tooltip/paper-tooltip.html">
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
