--- a/app/elements/recipe-collection.html
+++ b/app/elements/recipe-collection.html
@@ -27,7 +27,8 @@
                 on-response="newRecipesReceived"
                 loading="{{loadingRecipes}}">
         </iron-ajax>
-        <div class="layout horizontal center">
+
+        <div class="headerbar layout horizontal center">
             <!-- Navigation icons. -->
             <paper-button raised on-tap="previous" disabled$="[[!skip]]">
                 <iron-icon icon="icons:arrow-back"></iron-icon>
@@ -40,7 +41,6 @@
             <paper-spinner class="nav-button" active="[[loadingRecipes]]"
                     alt="loading recipes...">
             </paper-spinner>
-            <!--<span class="flex"></span>-->
             <!-- Search box. -->
             <paper-input class="flex" label="Filter"
                 type="text" value="{{titleFilter}}">
@@ -54,16 +54,20 @@
                 <div class="card-item" on-tap="itemClick">
                     <div class="layout horizontal end end-justified wrap">
                         <h3 class="recipe-title">[[recipe.title]]</h3>
-                        <!--<div class="layout horizontal end-justified">-->
-                            <span class="flex"></span>
-                            <span class="recipe-tags">
-                                [[formatRecipeTags(recipe.tags)]]
-                            </span>
-                        <!--</div>-->
+                        <span class="flex"></span>
+                        <span class="recipe-tags">
+                            [[formatRecipeTags(recipe.tags)]]
+                        </span>
                     </div>
                     <div>[[recipe.summary]]</div>
 
                     <iron-collapse id="collapse" opened="{{recipe._expanded}}">
+                        <!-- Edit recipe button. -->
+                        <paper-icon-button icon="icons:create"
+                                data-id$="[[recipe.id]]"
+                                on-tap="loadRecipePage">
+                        </paper-icon-button>
+
                         <div class="layout horizontal wrap">
                             <div class="flex-4 recipe-col">
                                 <strong>Ingredients</strong>
@@ -87,45 +91,37 @@
                             </div>
                             <!-- Info column. -->
                             <div class="flex-4 recipe-col">
-                                <div class="layout horizontal justified">
-                                    <div>
-                                        <template is="dom-if" if="[[recipe.amount]]">
-                                            <strong>Amount</strong>
-                                            <div>[[recipe.amount]]</div>
-                                            <br />
-                                        </template>
-                                        <template is="dom-if" if="[[recipe.time]]">
-                                            <strong>Time</strong>
-                                            <div>[[recipe.time]]</div>
-                                            <br />
-                                        </template>
-                                        <template is="dom-if" if="[[recipe.oven]]">
-                                            <Strong>Oven</Strong>
-                                            <div>[[recipe.oven]]</div>
-                                            <br />
-                                        </template>
-                                        <strong>Author</strong>
-                                        <div>[[recipe.author_name]]</div>
-                                        <br />
-                                        <template is="dom-if" if="[[recipe.source]]">
-                                            <strong>Source</strong>
-                                            <div>[[recipe.source]]</div>
-                                            <br />
-                                        </template>
-                                        <strong>Revision</strong>
-                                        <div>[[recipe.revision]]</div>
-                                        <br />
-                                        <template is="dom-if" if="[[recipe.notes]]">
-                                            <strong>Notes</strong>
-                                            <div>[[recipe.notes]]</div>
-                                            <br />
-                                        </template>
-                                    </div>
-                                    <paper-icon-button icon="icons:create"
-                                            data-id$="[[recipe.id]]"
-                                            on-tap="loadRecipePage">
-                                    </paper-icon-button>
-                                </div>
+                                <template is="dom-if" if="[[recipe.amount]]">
+                                    <strong>Amount</strong>
+                                    <div>[[recipe.amount]]</div>
+                                    <br />
+                                </template>
+                                <template is="dom-if" if="[[recipe.time]]">
+                                    <strong>Time</strong>
+                                    <div>[[recipe.time]]</div>
+                                    <br />
+                                </template>
+                                <template is="dom-if" if="[[recipe.oven]]">
+                                    <Strong>Oven</Strong>
+                                    <div>[[recipe.oven]]</div>
+                                    <br />
+                                </template>
+                                <strong>Author</strong>
+                                <div>[[recipe.author_name]]</div>
+                                <br />
+                                <template is="dom-if" if="[[recipe.source]]">
+                                    <strong>Source</strong>
+                                    <div>[[recipe.source]]</div>
+                                    <br />
+                                </template>
+                                <strong>Revision</strong>
+                                <div>[[recipe.revision]]</div>
+                                <br />
+                                <template is="dom-if" if="[[recipe.notes]]">
+                                    <strong>Notes</strong>
+                                    <div>[[recipe.notes]]</div>
+                                    <br />
+                                </template>
                             </div>
                         </div>
                     </iron-collapse>
@@ -214,7 +210,7 @@
                 loadRecipePage: function(e) {
                     e.stopPropagation();
                     var id = e.currentTarget.attributes['data-id'].value;
-                    page.show('/#!/recipes/' + id);
+                    page.show('/recipes/' + id);
                 },
                 itemClick: function (event) {
                     var item = event.currentTarget;
