--- a/app/elements/recipe-details.html
+++ b/app/elements/recipe-details.html
@@ -26,83 +26,81 @@
                 loading="{{loading.getRecipe}}">
         </iron-ajax>
 
-        <paper-icon-button icon="icons:arrow-left" on-tap="loadRecipesPage">
-        </paper-icon-button>
+        <div class="headerbar layout horizontal center">
+            <paper-button raised on-tap="loadRecipesPage">
+                <iron-icon icon="icons:arrow-back"></iron-icon>
+                All Recipes
+            </paper-button>
+        </div>
 
         <!-- The recipe card itself. --> 
         <paper-material>
-            <div class="layout horizontal end end-justified wrap">
-                <h3 class="recipe-title">[[recipe.title]]</h3>
-                <!--<div class="layout horizontal end-justified">-->
-                    <span class="flex"></span>
-                    <span class="recipe-tags">
-                        [[formatRecipeTags(recipe.tags)]]
-                    </span>
-                <!--</div>-->
-            </div>
-            <div>[[recipe.summary]]</div>
+            <div class="card-item">
+                <div class="layout horizontal end end-justified wrap">
+                    <h3 class="recipe-title">[[recipe.title]]</h3>
+                    <!--<div class="layout horizontal end-justified">-->
+                        <span class="flex"></span>
+                        <span class="recipe-tags">
+                            [[formatRecipeTags(recipe.tags)]]
+                        </span>
+                    <!--</div>-->
+                </div>
+                <div>[[recipe.summary]]</div>
 
-            <div class="layout horizontal wrap">
-                <div class="flex-4 recipe-col">
-                    <strong>Ingredients</strong>
-                    <ul class="ingredients-list">
-                        <template is="dom-repeat"
-                                items="[[recipe.ingredients]]"
-                                as="i">
-                            <li>[[i]]</li>
-                        </template>
-                    </ul>
-                </div>
-                <div class="flex-4 recipe-col">
-                    <strong>Directions</strong>
-                    <ol class="directions-list">
-                        <template is="dom-repeat"
-                                items="[[recipe.directions]]"
-                                as="d">
-                            <li>[[d]]</li>
-                        </template>
-                    </ol>
-                </div>
-                <!-- Info column. -->
-                <div class="flex-4 recipe-col">
-                    <div class="layout horizontal justified">
-                        <div>
-                            <template is="dom-if" if="[[recipe.amount]]">
-                                <strong>Amount</strong>
-                                <div>[[recipe.amount]]</div>
-                                <br />
+                <div class="layout horizontal wrap">
+                    <div class="flex-4 recipe-col">
+                        <strong>Ingredients</strong>
+                        <ul class="ingredients-list">
+                            <template is="dom-repeat"
+                                    items="[[recipe.ingredients]]"
+                                    as="i">
+                                <li>[[i]]</li>
                             </template>
-                            <template is="dom-if" if="[[recipe.time]]">
-                                <strong>Time</strong>
-                                <div>[[recipe.time]]</div>
-                                <br />
+                        </ul>
+                    </div>
+                    <div class="flex-4 recipe-col">
+                        <strong>Directions</strong>
+                        <ol class="directions-list">
+                            <template is="dom-repeat"
+                                    items="[[recipe.directions]]"
+                                    as="d">
+                                <li>[[d]]</li>
                             </template>
-                            <template is="dom-if" if="[[recipe.oven]]">
-                                <Strong>Oven</Strong>
-                                <div>[[recipe.oven]]</div>
-                                <br />
-                            </template>
-                            <strong>Author</strong>
-                            <div>[[recipe.author_name]]</div>
+                        </ol>
+                    </div>
+                    <!-- Info column. -->
+                    <div class="flex-4 recipe-col">
+                        <template is="dom-if" if="[[recipe.amount]]">
+                            <strong>Amount</strong>
+                            <div>[[recipe.amount]]</div>
                             <br />
-                            <template is="dom-if" if="[[recipe.source]]">
-                                <strong>Source</strong>
-                                <div>[[recipe.source]]</div>
-                                <br />
-                            </template>
-                            <strong>Revision</strong>
-                            <div>[[recipe.revision]]</div>
+                        </template>
+                        <template is="dom-if" if="[[recipe.time]]">
+                            <strong>Time</strong>
+                            <div>[[recipe.time]]</div>
                             <br />
-                            <template is="dom-if" if="[[recipe.notes]]">
-                                <strong>Notes</strong>
-                                <div>[[recipe.notes]]</div>
-                                <br />
-                            </template>
-                        </div>
-                        <paper-icon-button icon="icons:create"
-                                data-id$="[[recipe.id]]"
-                                on-tap="loadRecipePage">
-                        </paper-icon-button>
+                        </template>
+                        <template is="dom-if" if="[[recipe.oven]]">
+                            <Strong>Oven</Strong>
+                            <div>[[recipe.oven]]</div>
+                            <br />
+                        </template>
+                        <strong>Author</strong>
+                        <div>[[recipe.author_name]]</div>
+                        <br />
+                        <template is="dom-if" if="[[recipe.source]]">
+                            <strong>Source</strong>
+                            <div>[[recipe.source]]</div>
+                            <br />
+                        </template>
+                        <strong>Revision</strong>
+                        <div>[[recipe.revision]]</div>
+                        <br />
+                        <template is="dom-if" if="[[recipe.notes]]">
+                            <strong>Notes</strong>
+                            <div>[[recipe.notes]]</div>
+                            <br />
+                        </template>
                     </div>
                 </div>
             </div>
@@ -131,6 +129,11 @@
                 loadRecipesPage: function() {
                     page.show('/');
                 },
-            })();
+                formatRecipeTags: function(tags) {
+                    if (!tags) return "";
+                    return tags.join(", ");
+                },
+            });
+        })();
     </script>
 </dom-module>
